# db-query

./: .gitignore  CLAUDE.md  CROSS_DATABASE_TEST_RESULTS.md  FEATURES.md  FRONTEND_INTEGRATION_COMPLETE.md  Makefile  PROJECT_STATUS.md  README.md  UNION_TEST_RESULTS.md  rust编码设计原则.md
backend/: .env.example  .gitignore  ALIAS_SYSTEM_IMPLEMENTATION.md  COMPREHENSIVE_TEST_REPORT.md  CROSS_DATABASE_ARCHITECTURE.md  CROSS_DATABASE_QUICKSTART.md  Cargo.toml  JOIN_IMPLEMENTATION.md  PHASE4_COMPLETION_REPORT.md  PHASE4_IMPLEMENTATION_PROGRESS.md  PHASE4_PROGRESS_REPORT.md  PHASE4_TEST_REPORT.md  US1_MVP_TEST_REPORT.md  rustfmt.toml  simple_test.sh  test_alias_system.sh  test_cross_database.sh  test_cross_database_complete.sh  test_join_functionality.sh  test_postgresql_metadata.sh  test_query.json  test_unified_sql.sh  test_union_functionality.sh
backend/.cargo/: config.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: middleware.rs  mod.rs  routes.rs
backend/src/api/handlers/: connection.rs  cross_database_query.rs  domain.rs  metadata.rs  mod.rs  query.rs
backend/src/models/: connection.rs  cross_database_query.rs  domain.rs  metadata.rs  mod.rs  query.rs  unified_query.rs
backend/src/services/: connection_pool.rs  db_service.rs  llm_service.rs  metadata_cache.rs  mod.rs  query_cache.rs  query_service.rs
backend/src/services/database/: adapter.rs  doris.rs  druid.rs  mod.rs  mysql.rs  postgresql.rs
backend/src/storage/: mod.rs  sqlite.rs
backend/src/validation/: mod.rs  sql_validator.rs
backend/tests/: datafusion_integration_test.rs
(+94 files in other folders)
