[package]
name = "db-query-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQL engine and validation
datafusion = "51.0.0"
sqlparser = "0.60.0"

# Database
# Note: Using rusqlite for SQLite metadata storage
# DataFusion will handle PostgreSQL connections for query execution
rusqlite = { version = "0.38.0", features = ["bundled"] }
# PostgreSQL driver for metadata retrieval and connection pooling
tokio-postgres = { version = "0.7" }
deadpool-postgres = "0.14"
# MySQL driver for metadata retrieval and connection pooling
mysql_async = "0.35"
url = "2.5"

# LLM gateway
# Note: rig.rs integration will be added when available
# For now, we'll use HTTP client for LLM API calls
reqwest = { version = "0.12.26", features = ["json"] }

# Environment and configuration
dotenv = "0.15"
config = "0.15.19"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

